| Summary: | ASTERISK-20344: RTP/ICE STUN port is not configurable | ||
| Reporter: | Brent Eagles (beagles) | Labels: | |
| Date Opened: | 2012-08-30 09:22:58 | Date Closed: | 2012-09-24 07:34:27 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_rtp_asterisk |
| Versions: | 11.0.0-beta1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | There is no mechanism for overriding the default port for STUN servers in res_rtp_asterisk. | ||
| Comments: | |||